ingresses/grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: prometheus-operator
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: http://$host/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: http://$host/oauth2/start?rd=$request_uri
spec:
  rules:
  - host: grafana.dev.argoproj.io
    http:
      paths:  
      - backend:
          serviceName: prometheus-operator-grafana
          servicePort: 80
        path: /
